# leptos-cv-editor

./: .gitignore  Cargo.toml  README.md  cv.css  flake.nix  index.html
src/: main.rs
