[package]
name = "leptos-cv-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"

web-sys = { version = "0.3.60", features = ["Storage"] }
wasm-bindgen = "0.2.87"
leptos-markdown = { path = "../leptos-markdown/", version = "0.5.0" }

